# augur

./: .gitignore  CHANGELOG.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  invariants.md  security.md  strategies.md  usage.md
examples/crapi/: README.md
examples/invariants/: crapi.yaml
src/augur/: __init__.py  cli.py  engine.py
src/augur/http/: auth.py  executor.py  scope.py
src/augur/invariants/: checker.py  loader.py
src/augur/llm/: anthropic_client.py  client.py  ollama_client.py
src/augur/report/: curl.py  finding.py  html.py
src/augur/schema/: catalog.py  loader.py
src/augur/state/: graph.py
src/augur/strategies/: base.py  bola.py  mass_assignment.py
src/augur/utils/: logging.py
tests/: conftest.py
tests/integration/: test_engine_with_mock_api.py  test_scope_guard_blocks_off_host.py
tests/unit/: test_auth.py  test_finding.py  test_invariants_checker.py  test_invariants_injection.py  test_invariants_loader.py  test_mass_assignment.py  test_report_curl.py  test_report_html.py  test_schema_loader.py  test_scope.py  test_state_graph.py
