[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "augur-fuzz"
version = "0.1.0"
description = "LLM-driven fuzzer for HTTP APIs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.7",
    "jsonschema>=4.21",
    "openapi-spec-validator>=0.7",
    "jinja2>=3.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10", "respx>=0.21"]

[project.scripts]
augur = "augur.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["augur*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
